app/assets/stylesheets/oregon_digital/_header.scss
header {
  &.header {
    letter-spacing: 1px;
  }
  .navbar + .navbar,
  .navbar + .image-masthead {
    // Move searchbar back down
    margin-top: 0;
  }
  .navbar-toggler#main-nav-toggler {
    border-color: transparent;

    &:focus {
      outline: revert;
    }
    .navbar-toggler-icon {
      display: inline-block;
    }
  }
  .navbar-header {
    display: flex;
    flex-grow: 1;
    justify-content: space-between;
    margin-right: -15px;
    margin-left: -15px;
  }
  .navbar-header:before {
    display: unset;
    content: unset;
  }

  a#logo {
    display: flex;
    height: 100%;
    padding: 0;

    .logo {
      grid-column: 1;
      height: 45px;
      width: 45px;
    }
    .institution_name {
      padding-top: .25em;
      line-height: 1em;
      font-weight: 600;
      padding-left: .25em;
      margin-bottom: 0;

      .application-title {
        color: $navy-blue;
        letter-spacing: 0;
        margin: 0;
      }

      .tagline {
        color: $dark-grey;
        font-size: 11px;
        position: relative;
        top: -.5em;
      }
    }
  }

  .navbar {
    button.btn {
      padding: 7px 21px;
    }
    a.btn {
      padding: 10px 18px;
    }
    .btn {
      margin-right: 16px;
    }
  }

  .navbar-nav > li > a {
    padding-top:15px;
    padding-bottom:15px;

    &:hover {
      text-decoration: none;
      background-color: #eee;
    }
  }

  #user_utility_links {
    @media (min-width: breakpoint-min(lg)) {
      margin-right: -15px;
    }
  }

  ul.nav {
    a.explore-collections {
      padding: 10px 15px;
      padding-bottom: 2px;
      font-weight: 700;
      @media (max-width: breakpoint-max(sm)) {
        display: inline-block;
        font-size: 20px;
        margin-bottom: 2em;
      }
    }
    & > li:nth-child(2) {
      padding: 0 2em;
    }
    form {
      @media (max-width: breakpoint-max(sm)) {
        padding-bottom: 2em;
      }

      a.advanced-link {
        font-size: .75em;
        font-weight: 700;
        padding: 0;

        @media (min-width: breakpoint-min(md)) {
          & {
            float: right;
          }
        }
        @media (max-width: breakpoint-max(sm)) {
          font-size: 1.25em;
        }
      }
      .input-group {
        margin: auto;
        @media (max-width: breakpoint-min(lg)) {
          width: 75%;
        }

        button {
          position: absolute;
          left: 0;
          z-index: 10;
          background: unset;
          border: unset;
          width: 2.25em;
          height: calc(100% - 16px);
          margin-top: 8px;
          margin-bottom: 8px;
          border-right: 1px solid $light-grey;
        }
        input {
          background-color: $very-light-grey;
          border-radius: 0;
          padding-left: 2.5em;
          font-size: 1.25em;
          height: 100%;
        }
      }
    }
  }

  #masthead {
    box-shadow: 0 0 10px $dark-grey;
    border-width: 0 0 5px 0;
    padding: 1em 2em;
    @media (max-width: breakpoint-min(md)) {
      & {
        padding: .5em;
      }
    }

    .container-fluid {
      flex-wrap: wrap;
      padding-left: 15px;
      padding-right: 15px;
    }
  }

  #top-navbar-collapse {
    letter-spacing: 2px;

    @media (max-width: breakpoint-max(lg)) {
      justify-content: flex-start !important;
    }

    .divider {
      height: 1px;
      overflow: hidden;
      background-color: #e5e5e5;
    }

    #user-dropdown {
      @media (max-width: breakpoint-max(sm)) {
        display: none;
      }
    }
    #user-util-links {
      margin-top: -0.6em;
      
      li {
        font-size: 14px;

        a {
          color: #333;
        }

        & > a:hover{
          text-decoration: none;
        }
      }
      
      @media (max-width: breakpoint-max(sm)) {
        position: static;
        float: none;
        width: auto;
        margin-top: 0;
        background: transparent;
        border: 0;
        box-shadow: none;
        display: block;

        li {
          font-size: 16px;
        }
        
        .my-account-option {
          margin: .25em 0;
        }
      }
    }
  }
}

body.dashboard {
  padding: 0;

  header #masthead {
    position: relative;
  }
}

